--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -12,7 +12,7 @@
 			color: #fff;
 			font-size: 1.1em;
 		}
-		.popup-filter-contents-title {
+		.popup-filter-contents-title, .popup-orientation-required-title {
 			margin-top: 80px;
 			margin-bottom: 40px;
 		}
