QS-959: Use fixed height image for interests list

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -83,7 +83,9 @@
 				width: 100%;
 				vertical-align: middle;
 			}
-
+			.image.fixed-height-image {
+				height: 180px;
+			}
 			.matching {
 				margin-top: -32px;
 				position: relative;
