QS-970: Use users icon for accepted answers

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -38,6 +38,14 @@ body #root .App .view .page {
                     width: 40px;
                   }
                 }
+                .answer-question-other-picture {
+                  text-align: center;
+
+                  span {
+                    color: $dark-blue;
+                    line-height: 40px;
+                  }
+                }
               }
               .answer-question-other-picture-container {
                 margin-left: 2%;
