--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:url('fonts/icomoon.eot?aqqre2');
-	src:url('fonts/icomoon.eot?aqqre2#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?aqqre2') format('truetype'),
-	url('fonts/icomoon.woff?aqqre2') format('woff'),
-	url('fonts/icomoon.svg?aqqre2#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?6k3dwl');
+	src:url('fonts/icomoon.eot?6k3dwl#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?6k3dwl') format('truetype'),
+	url('fonts/icomoon.woff?6k3dwl') format('woff'),
+	url('fonts/icomoon.svg?6k3dwl#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -153,6 +153,10 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-person:before {
 	content: "\e917";
+}
+.icon-users:before {
+	content: "\e92e";
+	font-size: 1.6em;
 }
 .icon-photo:before {
 	content: "\e918";
