QS-958: Fix warnings and use title on tag filters

--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -11,6 +11,11 @@
     z-index: 15;
 
   }
+  
+  .tag-input-title {
+    font-weight: bold;
+    text-align: center;
+  }
   .tag-input {
     font-weight: 400;
     background: transparent;
