QS-958: Unselect filter on click outside and fix warnings

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -222,7 +222,7 @@ body #root .App .view .page.create-thread-page  {
       background: $dark-purple;
       height: 500px;
       left: 0;
-      position: fixed;
+      position: absolute;
       top: 50px;
       width: 100%;
       z-index: 1111;
