QS-987: Change delete thread icon style

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -107,7 +107,7 @@ body {
 					}
 				}
 
-				.icon-wrapper {
+				.icon-wrapper, .small-icon-wrapper {
 					background-color: $deep-purple;
 					border-radius: 50%;
 					display: inline-block;
@@ -123,6 +123,19 @@ body {
 
 					&:last-of-type {
 						margin-left: 15px;
+					}
+				}
+
+				.small-icon-wrapper {
+					height: 22px;
+					width: 22px;
+
+					span {
+						font-size: 0.8em;
+						line-height: 22px;
+					}
+					&:last-of-type {
+						margin-left: 0;
 					}
 				}
 
