--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -17,7 +17,7 @@ body #root .App .view .page.create-thread-page  {
     }
     .users-middle-vertical-line {
       border-left: 1px solid $green-alert;
-      height: 250px;
+      height: 45%;
       margin-left: 7px;
       margin-top: -10px;
       position: absolute;
@@ -32,7 +32,7 @@ body #root .App .view .page.create-thread-page  {
     .users-opposite-vertical-line {
       border-left: 2px solid $dark-purple;
       margin-top: -22px;
-      height: 150px;
+      height: 40%;
       margin-left: 7px;
       position: absolute;
     }
