QS-987: recoverPassword text

--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -1,3 +1,8 @@
 body #root .App .view .page #page-content.login-content {
   margin: 150px auto 0 auto;
+
+  .recover-password {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 }
