QS-987: Fix vertical line in ThreadPage

--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -3,9 +3,18 @@
 body #root .App .view .page.threads-page  {
   #page-content {
     margin-top: 70px;
+
+    .threads-vertical-connection {
+      background-color: $deep-purple;
+      height: 100%;
+      margin-left: 40.5px;
+      margin-top: 40.5px;
+      position: absolute;
+      width: 1px;
+      z-index: 1;
+    }
     .thread-listed {
       margin: 35px auto;
-
       .thread-first-image {
         background-color: $deep-purple;
         border-radius: 50%;
@@ -24,19 +33,9 @@ body #root .App .view .page.threads-page  {
         }
       }
 
-      .threads-vertical-connection {
-        background-color: $deep-purple;
-        height: 300px;
-        margin-left: 40.5px;
-        margin-top: 40.5px;
-        position: absolute;
-        width: 1px;
-        z-index: 1;
-      }
-
       .threads-opposite-vertical-connection {
         background: $dark-purple;
-        height: 200px;
+        height: 250px;
         margin-left: 40.5px;
         margin-top: 40.5px;
         position: absolute;
@@ -47,8 +46,12 @@ body #root .App .view .page.threads-page  {
       .thread-info-box {
         display: inline-block;
         margin-left: 15px;
-        max-width: 63%;
+        max-width: 75%;
         vertical-align: top;
+
+        @media only screen and (max-width: 500px) {
+          max-width: 63%;
+        }
 
         .thread-title {
           line-height: 30px;
@@ -81,6 +84,16 @@ body #root .App .view .page.threads-page  {
 
         .recommendations-count {
           line-height: 20px;
+        }
+
+        .chip-list {
+          .chip-wrapper {
+            max-width: 100%;
+
+            .chip {
+              max-width: 100%;
+            }
+          }
         }
       }
     }
