QS-987: Small style fix

--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -16,6 +16,10 @@ body #root .App {
           width: 75%;
         }
 
+        .chip-list {
+          margin: auto;
+          max-width: 85%;
+        }
         .recommendation-list {
 
           .swiper-slide {
