--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -1,6 +1,9 @@
 @import '../_partials/colors';
 
 body #root .App .view .page.create-thread-page  {
+  position: relative;
+  z-index: 1111;
+
   #page-content {
     .thread-title ul li input[type="text"] {
       color: #fff;
@@ -12,7 +15,7 @@ body #root .App .view .page.create-thread-page  {
       border-left: 1px solid $green-alert;
       height: 20%;
       margin-left: 7px;
-      top: 170px;
+      top: 120px;
       position: absolute;
     }
     .persons-middle-vertical-line {
@@ -40,7 +43,7 @@ body #root .App .view .page.create-thread-page  {
       border-left: 1px solid $green-alert;
       height: 15%;
       margin-left: 7px;
-      top: 170px;
+      top: 120px;
       position: absolute;
     }
     .contents-middle-vertical-line {
@@ -274,10 +277,16 @@ body #root .App .view .page.create-thread-page  {
       background: $dark-purple;
       height: 500px;
       left: 0;
+      padding-top: 30px;
       position: absolute;
-      top: 50px;
+      top: -50px;
       width: 100%;
       z-index: 1111;
+
+      .back-to-selected-filters {
+        cursor: pointer;
+        margin-left: 5%;
+      }
 
       .list-block {
         margin: 35px 0 35px 5%;
