--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+	overflow-y: scroll;
 	position: fixed !important;
 }
 
@@ -30,13 +31,19 @@
 			color: $deep-purple;
 			display: block;
 			font-size: 0.823529412em;
-			margin-top: 12px;
 
 			.icon-left-arrow {
 				color: #fff;
 				font-size: 25px;
 			}
 		}
+		.left {
+			margin-top: 12px;
+		}
+		.right {
+			margin-top: 8px;
+		}
+
 		.open-panel .icon-menu {
 			font-size: 25px;
 		}
