QS-990: Add notification green dot at menu link

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -49,6 +49,13 @@
 		.open-panel .icon-menu {
 			font-size: 25px;
 		}
+
+		.icon-circle {
+			color: $light-green;
+			font-size: 0.6em;
+			margin-left: 5px;
+			position: absolute;
+		}
 	}
 	&::after {
 		content: none;
