QS-969: Add last styles for edit profile page

--- a/src/scss/_partials/_date-input.scss
+++ b/src/scss/_partials/_date-input.scss
@@ -1,6 +1,4 @@
-.list-block li.date-item {
-	list-style-type: none;
-
+.list-block ul li.date-item {
 	.item-content.date-content {
 		.date-label {
 			width: 50%;
