--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -246,7 +246,7 @@ body #root .App .view .page.create-thread-page  {
     }
 
     .table-row {
-      display: table-row;
+      display: block;
       height: 30px;
       width: 100%;
     }
