--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -147,7 +147,7 @@ body #root .App .view .page.edit-profile-page  {
     }
 
     .table-row {
-      display: table-row;
+      display: block;
       height: 30px;
       width: 100%;
     }
