Fix user image and add prefix to border-radius rule

--- a/src/scss/_partials/_base.scss
+++ b/src/scss/_partials/_base.scss
@@ -11,6 +11,8 @@
 
     span {
       border-radius: 50%;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
       color: white;
     }
 
