--- a/src/scss/_partials/_small-chip.scss
+++ b/src/scss/_partials/_small-chip.scss
@@ -4,5 +4,7 @@
     height: 18px;
     line-height: 18px;
     border-radius: 9px;
+    -moz-border-radius: 9px;
+    -webkit-border-radius: 9px;
     padding: 0 10px;
 }
