--- a/src/scss/_partials/_profile-avatars-connection.scss
+++ b/src/scss/_partials/_profile-avatars-connection.scss
@@ -14,6 +14,8 @@
   .small-user-image {
     background-color: #fff;
     border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
     height: 30px;
     margin-left: 5px;
     margin-right: 5px;
@@ -22,6 +24,8 @@
 
     img {
       border-radius: 50%;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
       height: auto;
       margin: 1px;
       width: 28px;
