--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -23,18 +23,24 @@ body #root .App .view .page {
               .answer-question-own-picture-container, .answer-question-other-picture-container {
                 background-color: #fff;
                 border-radius: 50%;
+                -moz-border-radius: 50%;
+                -webkit-border-radius: 50%;
                 display: inline-block;
                 height: 42px;
                 width: 42px;
 
                 .answer-question-own-picture, .answer-question-other-picture {
                   border-radius: 50%;
+                  -moz-border-radius: 50%;
+                  -webkit-border-radius: 50%;
                   height: 40px;
                   margin: 1px 0 0 1px;
                   width: 40px;
 
                   img {
                     border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    -webkit-border-radius: 50%;
                     height: 40px;
                     width: 40px;
                   }
