--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -22,6 +22,8 @@ body #root .App .view .page.other-questions-page  {
         .edit-question-button {
           background-color: $deep-purple;
           border-radius: 50%;
+          -moz-border-radius: 50%;
+          -webkit-border-radius: 50%;
           float: right;
           font-size: 10px;
           height: 22px;
@@ -37,6 +39,8 @@ body #root .App .view .page.other-questions-page  {
           .answer-answered-picture, .answer-not-answered-picture {
             background-color: #fff;
             border-radius: 50%;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
             display: inline-block;
             height: 22px;
             margin: 10px 10px 10px 0;
@@ -45,6 +49,8 @@ body #root .App .view .page.other-questions-page  {
 
             img {
               border-radius: 50%;
+              -moz-border-radius: 50%;
+              -webkit-border-radius: 50%;
               height: 20px;
               margin-top: 1px;
               width: 20px;
