--- a/src/scss/pages/questions.scss
+++ b/src/scss/pages/questions.scss
@@ -39,6 +39,8 @@ body #root .App .view .page.questions-page  {
 
           img {
             border-radius: 50%;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
             width: 90px;
           }
 
@@ -58,6 +60,8 @@ body #root .App .view .page.questions-page  {
         .edit-question-button {
           background-color: $deep-purple;
           border-radius: 50%;
+          -moz-border-radius: 50%;
+          -webkit-border-radius: 50%;
           float: right;
           font-size: 10px;
           height: 22px;
@@ -73,6 +77,8 @@ body #root .App .view .page.questions-page  {
           .answer-answered-picture, .answer-not-answered-picture {
             background-color: #fff;
             border-radius: 50%;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
             display: inline-block;
             height: 22px;
             margin: 10px 10px 10px 0;
@@ -81,6 +87,8 @@ body #root .App .view .page.questions-page  {
 
             img {
               border-radius: 50%;
+              -moz-border-radius: 50%;
+              -webkit-border-radius: 50%;
               height: 20px;
               margin-top: 1px;
               width: 20px;
