Fix styles in questions, fix errors in profile pages and add messages notifications

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -51,7 +51,7 @@
 		}
 
 		.icon-circle {
-			color: $light-green;
+			color: $green-alert;
 			font-size: 0.6em;
 			margin-left: 5px;
 			position: absolute;
