QS-1001: Message when finish answering register questions

--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -12,10 +12,14 @@
 			color: #fff;
 			font-size: 1.1em;
 		}
-		.popup-filter-contents-title, .popup-orientation-required-title {
+		.popup-filter-contents-title, .popup-orientation-required-title, .popup-register-finished-title {
 			margin-top: 80px;
 			margin-bottom: 40px;
 		}
+		.popup-register-finished-text {
+			margin-bottom: 40px;
+		}
+
 		.filter-icons-row-wrapper {
 			margin-top: 20px;
 			text-align: center;
