QS-1001: Show only one question stat at once, enlarge edit answer button and some refactors

--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -20,20 +20,21 @@ body #root .App .view .page.other-questions-page  {
           margin-bottom: 10px;
           width: 85%;
         }
-        .edit-question-button {
-          background-color: $deep-purple;
-          border-radius: 50%;
-          -moz-border-radius: 50%;
-          -webkit-border-radius: 50%;
-          float: right;
-          font-size: 10px;
-          height: 22px;
-          line-height: 24px;
-          text-align: center;
-          width: 22px;
+        a {
+          color: #fff;
 
-          a {
-            color: #fff;
+          .edit-question-button {
+            background-color: $deep-purple;
+            border-radius: 50%;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
+            display: block;
+            float: right;
+            font-size: 10px;
+            height: 22px;
+            line-height: 24px;
+            text-align: center;
+            width: 22px;
           }
         }
         .answer-answered, .answer-not-answered {
